# burn-mamba

./: .gitattributes  CLAUDE.md  Cargo.toml  README.md  cubecl.toml  files.md
.github/workflows/: docs.yml
doc/: crates.js  help.html  mamba-2-ref.md  settings.html  src-files.js
doc/burn_mamba/: all.html  constant.DENY_INF.html  constant.DENY_NAN.html  index.html  macro.decl_ssd_autodiff_backend_ext!.html  macro.decl_ssd_autodiff_backend_ext.html  macro.impl_ssd_backend_ext_for_burn_backends!.html  macro.impl_ssd_backend_ext_for_burn_backends.html  sidebar-items.js
doc/burn_mamba/generic/: enum.MambaBidiLayers.html  enum.MambaBidiLayersConfig.html  enum.MambaBidiLayersConfigSerde.html  enum.MambaBidiLayersRecord.html  enum.MambaBidiLayersRecordItem.html  enum.MambaCaches.html  enum.MambaLatentNet.html  enum.MambaLatentNetConfig.html  enum.MambaLatentNetConfigSerde.html  enum.MambaLatentNetRecord.html  enum.MambaLatentNetRecordItem.html  enum.MambaSsdPath.html  enum.MambaVocabNet.html  enum.MambaVocabNetConfig.html  enum.MambaVocabNetConfigSerde.html  enum.MambaVocabNetRecord.html  enum.MambaVocabNetRecordItem.html  enum.OutputMerge.html  enum.OutputMergeConfig.html  enum.OutputMergeConfigSerde.html  enum.OutputMergeRecord.html  enum.OutputMergeRecordItem.html  index.html  sidebar-items.js  struct.BidiLayerPair.html  struct.BidiLayerPairRecord.html  struct.BidiLayerPairRecordItem.html  struct.BidiLayers.html  struct.BidiLayersBuilder.html  struct.BidiLayersRecord.html  struct.BidiLayersRecordItem.html  struct.LatentNetwork.html  struct.LatentNetworkBuilder.html  struct.LatentNetworkRecord.html  struct.LatentNetworkRecordItem.html  struct.Layer.html  struct.LayerRecord.html  struct.LayerRecordItem.html  struct.Layers.html  struct.LayersBuilder.html  (+10 more)
doc/burn_mamba/mamba1/: index.html  sidebar-items.js  struct.Mamba1.html  struct.Mamba1Cache.html  struct.Mamba1CacheConfig.html  struct.Mamba1Caches.html  struct.Mamba1CachesConfig.html  struct.Mamba1Config.html  struct.Mamba1Layer.html  struct.Mamba1LayerConfig.html  struct.Mamba1Network.html  struct.Mamba1NetworkConfig.html
doc/burn_mamba/mamba2/: index.html  sidebar-items.js  struct.Mamba2.html  struct.Mamba2Cache.html  struct.Mamba2CacheConfig.html  struct.Mamba2Caches.html  struct.Mamba2CachesConfig.html  struct.Mamba2Config.html  struct.Mamba2Layer.html  struct.Mamba2LayerConfig.html  struct.Mamba2Layers.html  struct.Mamba2LayersConfig.html  struct.Mamba2Network.html  struct.Mamba2NetworkConfig.html
doc/burn_mamba/mamba3/: index.html  sidebar-items.js  trait.Mamba3AutodiffBackendExt.html  trait.Mamba3BackendExt.html
doc/burn_mamba/modules/: enum.MambaSsdPath.html  index.html  sidebar-items.js  trait.MambaBlock.html  trait.MambaBlockConfig.html
doc/burn_mamba/prelude/: index.html
doc/burn_mamba/schedule/: enum.BidiSchedule.html  enum.Schedule.html  index.html  sidebar-items.js
doc/burn_mamba/utils/: fn.contains_nan_or_inf.html  fn.div_eps.html  fn.div_eps_f32.html  fn.stable_max.html  index.html  sidebar-items.js
doc/doc/burn_mamba/: index.html
doc/doc/search.index/: 04f818a24435.js  0b538e444c36.js  0c08d1149a9c.js  0dc6a122fac1.js  116e0dfecc4e.js  11f0c0d6a8fa.js  129ac446eb74.js  154fdfc4b954.js  399361545c90.js  42c56908b33b.js  48012badfdb9.js  48731ac1a4fc.js  4bbc780b9ce1.js  4e242a5d923e.js  4f7642c92889.js  563e2b4fdba2.js  5db7707e3d4f.js  6354516d3ef4.js  77542ced3723.js
doc/search.index/: 0008296ca7.js  00594acdb4.js  005f388176.js  0091fecc06.js  00a2951585.js  00a7022ba0.js  00af247cc2.js  00d38ae1bf.js  00f76b4899.js  00f96b5b2f.js  010c0206f6.js  011a881d7c.js  013392a2ed.js  0143d6e6eb.js  016857fe00.js  0172833e99.js  017fa9a61c.js  01820368d1.js  01ae72070c.js  01b2a2b4c4.js  01bb312934ac.js  01d1690809.js  01db6694c3.js  01ece006ea.js  01f12066ad.js  0217538f7c.js  022c528e6f.js  023bafd6d7.js  023ceaef5c.js  025aadf083.js  025bc0ab65.js  02a38fa380.js  02a53a235a.js  02a65ff09b.js  02be3a0b91.js  032646921f.js  0329befe66.js  034d6adace.js  0360da5912.js  03646ada40.js  (+1993 more)
doc/search.index/crateNames/: bdd337a04b05.js
doc/search.index/desc/: 01e73cafd4.js  08a1446ea2.js  1422439d98.js  1f84b98ed2.js  2cd0c0ebdd.js  346f3a2c0b.js  59005939e3.js  5bf4414281.js  6a70d5507e.js  6c0e06f6d4.js  7021f96f60.js  759de6066d.js  78bb5c49c1.js  9abdb825ad.js  ac689450e8.js  b1d5a5311b.js  be0f0a0d27.js  c2480c86a9.js  cad3f8e919.js  cd056fa777.js  dbb449dd9a.js  dfd68d3ec4.js  e7d22f3b9f.js  e99011a445.js  fa9a2b8b70.js  ffb0e5cca0.js
doc/search.index/entry/: 097f77c47c.js  11d2374a24.js  1d085fcf69.js  1d8fd5f8d1.js  1e93471c7b.js  1fac0fac97.js  2bac7a88c3.js  35e87158cc.js  (+33 more)
examples/: README.md
examples/common/: backend.rs  cli.rs  device.rs  mod.rs  model.rs  optim.rs  training.rs
examples/fibonacci/: README.md  dataset.rs  inference.rs  main.rs  model.rs  training.rs
examples/mnist-ae/: README.md  inference.rs  main.rs  model.rs  training.rs
examples/mnist-ae-bidi/: README.md  main.rs  model.rs  training.rs
examples/mnist-class/: README.md  inference.rs  main.rs  model.rs  training.rs
examples/mnist-class-distill/: cli.rs  dataset.rs  main.rs  model.rs  training.rs
examples/state-tracking/: README.md  dataset.rs  inference.rs  main.rs  model.rs  training.rs
src/: generic.rs  layer_rms_norm_1d.rs  lib.rs  mamba.rs  mamba1.rs  mamba1_block.rs  mamba2.rs  mamba2_block.rs  mamba_block.rs  mse.rs  rms_norm_gated.rs  schedule.rs  silu.rs  utils.rs
src/generic/: tests.rs
src/mamba1/: cache.rs  layer.rs  mamba1.rs  mod.rs  network.rs
src/mamba2/: cache.rs  layer.rs  mamba2.rs  mod.rs  network.rs
src/mamba3/: cache.rs  cache_v2.rs  forward2.rs  helpers.rs  layer.rs  mamba3.rs  mod.rs  network.rs  pathway.rs  rotation.rs  ssd_path.rs
src/modules/: bidi.rs  cache.rs  layer.rs  layers.rs  mod.rs  multi_gate.rs  network.rs
src/schedule/: tests.rs
src/utils/: backend_macros.rs  combined_grad.rs  fprim.rs  gqa.rs  log_sigmoid.rs  mod.rs  primitive.rs  rms_norm.rs  rms_norm_gated.rs  sanity.rs  scheduler.rs  segsum.rs  silu.rs  softplus.rs  split.rs  test_helpers.rs
(+1181 files in other folders)
