[package]
name = "burn-mamba"
version = "0.18.0"
edition = "2024"

[features]
default = ["mamba1", "mamba2", "autodiff"]
mamba1 = []
mamba2 = ["autodiff"]
autodiff = ["burn/autodiff"]
cubecl = ["dep:burn-cubecl", "burn/cubecl"]
fusion = ["burn/fusion", "dep:burn-fusion"]
# backend selection
backend-ndarray = ["burn/ndarray", "_dev-has-backend"]
backend-ndarray-blas-accelerate = ["backend-ndarray", "burn/std", "burn/accelerate"]
backend-ndarray-blas-netlib = ["backend-ndarray", "burn/std", "burn/blas-netlib"]
backend-ndarray-blas-openblas = ["backend-ndarray", "burn/std", "burn/openblas"]
# backend-flex = ["burn/flex", "_dev-has-backend"]
backend-cpu = ["burn/cpu", "burn/std", "cubecl", "_dev-has-backend"]
backend-tch-cpu = ["burn/tch", "burn/std", "_dev-has-backend"]
backend-tch-gpu = ["burn/tch", "burn/std", "_dev-has-backend"]
backend-wgpu = ["burn/wgpu", "burn/std", "cubecl", "_dev-has-backend"]
backend-metal = ["burn/metal", "burn/std", "cubecl", "_dev-has-backend"]
backend-vulkan = ["burn/vulkan", "burn/std", "cubecl", "_dev-has-backend"]
backend-cuda = ["burn/cuda", "burn/std", "cubecl", "_dev-has-backend"]
backend-rocm = ["burn/rocm", "burn/std", "cubecl", "_dev-has-backend"]
backend-remote = ["burn/remote", "burn/std", "cubecl", "_dev-has-backend"]
# misc features for tests or examples
dev-f16 = []
dev-simd = ["burn/simd", "burn/std"]
dev-autotune = ["burn/autotune"]
_dev-has-backend = [] # signal if any backend was selected
# TODO: the `dev-*`/`backend-*` features were initially meant to only refer to testing/examples, but now they
# leak into the library for the cubecl needs. Try to solve this.

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }

### For the main branch. ###
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "fa9f6815d1d03e3e54aaec67786b51a51c8bb55c", default-features = false}
burn-cubecl = { git = "https://github.com/tracel-ai/burn.git", rev = "fa9f6815d1d03e3e54aaec67786b51a51c8bb55c", default-features = false, optional = true}
burn-fusion = { git = "https://github.com/tracel-ai/burn.git", rev = "fa9f6815d1d03e3e54aaec67786b51a51c8bb55c", default-features = false, optional = true}
# burn = { version = "=0.21.0-pre.2", default-features = false}
# burn-cubecl = { version = "=0.21.0-pre.2", default-features = false, optional = true}
# burn-fusion = { version = "=0.21.0-pre.2", default-features = false, optional = true}

### For local development. ###
# burn = { path = "../burn/crates/burn", default-features = false }
# burn-cubecl = { path = "../burn/crates/burn-cubecl", default-features = false }
# burn-fusion = { path = "../burn/crates/burn-fusion", default-features = false, optional = true }

[dev-dependencies]
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
flate2 = "1.1.4"
dirs = "6.0.0"
pico-args = { version = "0.5.0", features = ["eq-separator", "combined-flags"] }
temp-dir = "0.1.16"

### For the main branch. ###
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "fa9f6815d1d03e3e54aaec67786b51a51c8bb55c", default-features = false, features = ["autodiff", "train", "dataset", "std"]}
burn-dataset = { git = "https://github.com/tracel-ai/burn.git", rev = "fa9f6815d1d03e3e54aaec67786b51a51c8bb55c", features = ["network"] }
# burn = { version = "=0.21.0-pre.2", default-features = false, features = ["autodiff", "train", "dataset", "std"]}
# burn-dataset = { version = "=0.21.0-pre.2", features = ["network"] }
### For local development. ###
# burn = { path = "../burn/crates/burn", default-features = false, features = ["autodiff", "train", "dataset", "std"] }
# burn-dataset = { path = "../burn/crates/burn-dataset", default-features = false, features = ["network"] }
