[package]
name = "burn-mamba"
version = "0.28.0"
edition = "2024"

[features]
default = ["mamba1", "mamba2", "mamba3", "autodiff", "backend-flex"]
mamba1 = []
mamba2 = ["autodiff"]
mamba3 = ["autodiff"]
autodiff = ["burn/autodiff"]
cubecl = ["dep:burn-cubecl", "burn/cubecl"]
fusion = ["burn/fusion", "dep:burn-fusion"]
# Backend selection. With the Dispatch architecture each feature simply enables
# the corresponding burn backend; multiple may be compiled in simultaneously.
# At runtime the examples (and tests) use `Device::default()`, which resolves to
# an enabled backend (honouring the `BURN_DEVICE` env override). Each backend
# also turns on the internal `_dev-test` marker so the tensor test suite compiles
# under whichever backend is present.
backend-ndarray = ["burn/ndarray", "_dev-test"]
backend-ndarray-blas-accelerate = ["backend-ndarray", "burn/std", "burn/accelerate"]
backend-ndarray-blas-netlib = ["backend-ndarray", "burn/std", "burn/blas-netlib"]
backend-ndarray-blas-openblas = ["backend-ndarray", "burn/std", "burn/openblas"]
backend-flex = ["burn/flex", "_dev-test"]
backend-flex-rayon = ["backend-flex", "dep:burn-flex", "burn-flex?/rayon"]
backend-cpu = ["burn/cpu", "burn/std", "cubecl", "_dev-test"]
backend-tch-cpu = ["burn/tch", "burn/std", "_dev-test"]
backend-tch-gpu = ["burn/tch", "burn/std", "_dev-test"]
backend-wgpu = ["burn/wgpu", "burn/std", "cubecl", "_dev-test"]
backend-webgpu = ["burn/webgpu", "burn/std", "cubecl", "_dev-test"]
backend-metal = ["burn/metal", "burn/std", "cubecl", "_dev-test"]
backend-vulkan = ["burn/vulkan", "burn/std", "cubecl", "_dev-test"]
backend-cuda = ["burn/cuda", "burn/std", "cubecl", "_dev-test"]
backend-rocm = ["burn/rocm", "burn/std", "cubecl", "_dev-test"]
backend-remote = ["burn/remote", "burn/std", "cubecl", "_dev-test"]
# misc features for tests or examples
# `_dev-test` (internal): enabled by every `backend-*` so the tensor test suite
# compiles whenever a backend is present. Not meant to be enabled directly.
_dev-test = []
dev-f16 = []
dev-simd = ["burn/simd", "burn/std"]
dev-autotune = ["burn/autotune"]

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
# burn-flex = { version = "0.22.0-pre.1", default-features = false, optional = true }
burn-flex = { git = "https://github.com/tracel-ai/burn.git", rev = "ed4d313b16ac348093cfa0f979774b4312b17058", default-features = false, optional = true }

### For the main branch. ###
# burn = { version = "0.22.0-pre.1", default-features = false}
# burn-cubecl = { version = "0.22.0-pre.1", default-features = false, optional = true}
# burn-fusion = { version = "0.22.0-pre.1", default-features = false, optional = true}
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "ed4d313b16ac348093cfa0f979774b4312b17058", default-features = false, features = ["extension"] }
burn-cubecl = { git = "https://github.com/tracel-ai/burn.git", rev = "ed4d313b16ac348093cfa0f979774b4312b17058", default-features = false, optional = true}
burn-fusion = { git = "https://github.com/tracel-ai/burn.git", rev = "ed4d313b16ac348093cfa0f979774b4312b17058", default-features = false, optional = true}

### For local development. ###
# burn = { path = "../burn/crates/burn", default-features = false }
# burn-cubecl = { path = "../burn/crates/burn-cubecl", default-features = false, optional = true }
# burn-fusion = { path = "../burn/crates/burn-fusion", default-features = false, optional = true }

[dev-dependencies]
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
flate2 = "1.1.4"
dirs = "6.0.0"
pico-args = { version = "0.5.0", features = ["eq-separator", "combined-flags"] }
temp-dir = "0.1.16"
image = "0.25.10"

### For the main branch. ###
# burn = { version = "0.22.0-pre.1", default-features = false, features = ["autodiff", "train", "dataset", "std", "optim"]}
# burn-dataset = { version = "0.22.0-pre.1", features = ["network"] }
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "ed4d313b16ac348093cfa0f979774b4312b17058", default-features = false, features = ["autodiff", "train", "dataset", "std", "optim"]}
burn-dataset = { git = "https://github.com/tracel-ai/burn.git", rev = "ed4d313b16ac348093cfa0f979774b4312b17058", features = ["network"] }

### For local development. ###
# burn = { path = "../burn/crates/burn", default-features = false, features = ["autodiff", "train", "dataset", "std"] }
# burn-dataset = { path = "../burn/crates/burn-dataset", default-features = false, features = ["network"] }
